--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Lógica do Jogo -->
     <script>
         // --- Imagens ---
-        const IMG_MOSQUITO = "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Aedes_aegypti_CDC-Gathany.jpg/320px-Aedes_aegypti_CDC-Gathany.jpg";
+        const IMG_MOSQUITO = "https://share.google/7DrOPnV2nGR79iStK";
         const TARGETS_DATA = [
             { id: 'c1', type: 'breeding', label: 'Pneu', img: "https://images.unsplash.com/photo-1578894381163-e72c17f2d45f?auto=format&fit=crop&w=150&q=80" },
             { id: 'c2', type: 'breeding', label: 'Garrafa', img: "https://images.unsplash.com/photo-1602143407151-11115cdbf69c?auto=format&fit=crop&w=150&q=80" },
