--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Jogador -->
         <div id="player" class="absolute w-20 h-20 flex flex-col items-center justify-center cursor-move z-50 animate-float drop-shadow-lg" style="left: 50%; top: 50%; transform: translate(-50%, -50%);">
             <div id="player-ring" class="w-full h-full rounded-full border-4 border-dashed border-[#ff8c00] overflow-hidden bg-white/20 backdrop-blur-sm">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Aedes_aegypti_CDC-Gathany.jpg/320px-Aedes_aegypti_CDC-Gathany.jpg" alt="Agente" class="w-full h-full object-contain select-none pointer-events-none" />
+                <img src="https://i.imgur.com/zJo4otn.png" alt="Agente" class="w-full h-full object-contain select-none pointer-events-none" />
             </div>
         </div>
     </main>
